--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Retrieve wave information for Portuguese official weather institute",
   "main": "index.js",
   "scripts": {
-    "test": "xo && mocha"
+    "test": "xo && nyc mocha",
+    "report-coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "xo": {
     "space": true
@@ -25,7 +26,9 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "codecov": "^3.1.0",
     "mocha": "^5.2.0",
+    "nyc": "^13.1.0",
     "should": "^13.2.3",
     "xo": "^0.23.0"
   }
