--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
 - 10
+
+after_success:
+  - npm run report-coverage
+
 deploy:
   provider: npm
   email: afsverissimo@gmail.com
