--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "author": "André Veríssimo",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "moment": "^2.27.0",
+    "cheerio": "^1.0.0",
+    "moment": "^2.30.1",
     "request": "^2.88.0",
     "semver": "^7.6.3",
     "tough-cookie": "^5.0.0"
